--- a/app/build.gradle
+++ b/app/build.gradle
@@ -1,6 +1,8 @@
 plugins {
     id 'com.android.application'
     id 'kotlin-android'
+    id 'kotlin-kapt'
+
 }
 
 android {
@@ -22,7 +24,15 @@ android {
             proguardFiles getDefaultProguardFile('proguard-android-optimize.txt'), 'proguard-rules.pro'
         }
     }
+    dataBinding {
+        enabled = true
+    }
+    buildFeatures {
+        viewBinding true
+        dataBinding true
+    }
     compileOptions {
+        coreLibraryDesugaringEnabled true
         sourceCompatibility JavaVersion.VERSION_1_8
         targetCompatibility JavaVersion.VERSION_1_8
     }
@@ -31,12 +41,59 @@ android {
     }
 }
 
-dependencies {
+ext {
 
+    core_version = "1.6.0"
+    appcompat_version = "1.3.1"
+    constraintlayout_version = "2.1.0"
+    recyclerview_version = "1.2.1"
+    material_design = "1.4.0-alpha01"
+    lifecycle_version = "2.3.1"
+    lifecycle_ext_version = "2.2.0"
+    kotlinx_coroutines_version = "1.3.1"
+
+
+    retrofit_version = '2.9.0'
+    okhttp_version = '4.9.1'
+    moshi_converter_version = '2.6.0'
+    moshi_kotlin_version = '1.12.0'
+    work_version = '2.5.0'
+
+
+
+    mockitoKotlin_version = '2.2.0'
+    coreTesting_version = '2.1.0'
+    kotlinxCoroutines_version = '1.4.2'
+}
+
+dependencies {
+    def kotlin_version = "1.4.32"
+    def room_version = "2.3.0"
+    def koin_version = "3.1.2"
+    def dslist_version = "0.5.0"
+
+    implementation "org.jetbrains.kotlin:kotlin-stdlib:$kotlin_version"
     implementation 'androidx.core:core-ktx:1.7.0'
     implementation 'androidx.appcompat:appcompat:1.4.0'
     implementation 'com.google.android.material:material:1.4.0'
     implementation 'androidx.constraintlayout:constraintlayout:2.1.2'
+
+    implementation "thevoid.whichbinds.dslist:dslist:$dslist_version"
+
+    /*implementation "androidx.room:room-runtime:$room_version"
+    annotationProcessor "androidx.room:room-compiler:$room_version"*/
+    implementation "androidx.room:room-ktx:2.4.0-beta02"
+    kapt "androidx.room:room-compiler:2.4.0-beta02"
+    /*kapt "androidx.room:room-compiler:$room_version"*/
+    //kapt "androidx.room:room-compiler:$rootProject.roomVersion"
+
+    implementation "io.insert-koin:koin-android:$koin_version"
+    implementation "io.insert-koin:koin-android-compat:$koin_version"
+    implementation "io.insert-koin:koin-androidx-workmanager:$koin_version"
+    implementation "io.insert-koin:koin-androidx-compose:$koin_version"
+
+    coreLibraryDesugaring 'com.android.tools:desugar_jdk_libs:1.1.5'
+
     testImplementation 'junit:junit:4.+'
     androidTestImplementation 'androidx.test.ext:junit:1.1.3'
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.4.0'
